--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,9 +1,10 @@
 @charset "UFT-8";
 
-*{
-    margin: 0px;
-    padding: 0px;
-}
+@import url('https://fonts.googleapis.com/css2? family= Passion+One & display=swap');
+
+@import url('https://fonts.googleapis.com/css2? family= Playfair+Display & family= Roboto & display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Playfair+Display&family=Roboto&display=swap');
 
 :root{
     --cor_0:#F25922;
@@ -12,11 +13,21 @@
     --cor_3:#594842;
     --cor_4:#332E2C;
     --cor_de_fundo:#F59E82;
+    --font_do_titulo:'Passion One', sans-serif;
+    --font_padrão:'Roboto', sans-serif;
+    --font_ingrediente:'Cookie', cursive;
 }
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 
 html, body{
     min-height: 100vh;
     background-color: var(--cor_de_fundo);
+    font-family: var(--font_padrão);
 }
 
 header{
@@ -26,8 +37,10 @@ header{
 }
 
 header > h1{
+    font-family: var(--font_do_titulo);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 7vh;
 }
 
 header > p {
@@ -56,15 +69,31 @@ section{
 section.imagem{
     background-color: rgb(68, 67, 67);
     color: white;
-    
 }
 
 section.imagem > ul, h3{
     background-color: rgba(0, 0, 0, 0.205);
-    padding-left: 30px;
-    width: 400px;    
+    padding-left: 50px;
+    padding-top: 10px;
+    width: 400px;   
 }
 
+section.imagem > ul{
+    font-family: var(--font_ingrediente);
+    font-size: 1.2em;
+}
+
+h2{
+    text-align: center;
+    padding: 10px 0px;
+}
+
+iframe{
+    max-width: 500px;
+    display: block;
+    margin: auto;
+    padding-bottom: 20px;
+}
 
 footer{
     background-color: var(--cor_2);
