--- a/estilo/style.css
+++ b/estilo/style.css
@@ -58,15 +58,38 @@ header a:hover, footer a:hover{
 }
 
 section{
-    padding-top: 5vh;
-    padding-bottom: 5vh;
     padding-left: 30px;
     line-height: 1.7em;
     background-color: white;
     color: black;
 }
 
+section#grande{
+    padding-top: 30vh;
+    padding-bottom: 30vh;
+}
+
+section.normal{
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
+
+section a{
+    color: black;
+    text-decoration: none;
+    padding: 5px;
+}
+
+section  a:hover{
+    background-color: #BF6341;
+    color: white;
+    border-radius: 2px;
+    text-decoration: underline;
+}
+
 section.imagem{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     background-color: rgb(68, 67, 67);
     color: white;
 }
@@ -78,21 +101,24 @@ section.imagem > ul, h3{
     width: 400px;   
 }
 
-section.imagem > ul{
-    font-family: var(--font_ingrediente);
-    font-size: 1.2em;
-}
 
 h2{
     text-align: center;
     padding: 10px 0px;
 }
 
+p.fonte{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: right;
+    font-size: 2.3vh;
+    padding-top: 20px;
+    padding-right: 40px;
+}
+
 iframe{
-    max-width: 500px;
     display: block;
     margin: auto;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 footer{
