--- a/estilo/style.css
+++ b/estilo/style.css
@@ -41,10 +41,13 @@ header > h1{
     padding-top: 50px;
     font-variant: small-caps;
     font-size: 7vh;
+    text-shadow: 3px 3px 4px black;
 }
 
 header > p {
     padding-bottom: 50px;
+    text-shadow: 2px 2px 4px black;
+    font-size: 3vh;
 }
 
 header  a, footer a{
@@ -57,16 +60,16 @@ header a:hover, footer a:hover{
     text-decoration: underline;
 }
 
+main{
+    max-width: 100%;
+    background-color: var(--cor_3);
+}
+
 section{
     padding-left: 30px;
     line-height: 1.7em;
     background-color: white;
     color: black;
-}
-
-section#grande{
-    padding-top: 30vh;
-    padding-bottom: 30vh;
 }
 
 section.normal{
@@ -91,26 +94,54 @@ section.imagem{
     padding-top: 10vh;
     padding-bottom: 10vh;
     background-color: rgb(68, 67, 67);
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.5);
 }
 
 section.imagem > ul, h3{
-    background-color: rgba(0, 0, 0, 0.205);
+    background-color: rgba(0, 0, 0, 0.575);
     padding-left: 50px;
-    padding-top: 10px;
-    width: 400px;   
+    padding-top: 30px;
+    max-width: 500px;
+    text-shadow: 3px 3px 5px black;
+    font-size: 2.6vh;
 }
 
+section.imagem li{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+section#img01{
+    background-image: url('../imagens/bolo-de-chocolate.jpg');
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url('../imagens/brigadeiro.jpg');
+    padding-top: 30vh;
+    padding-bottom: 30vh;
+    background-position: right center;
+}
+
+section#img03{
+    background-image: url('../imagens/empada.jpg');
+    background-position: right center;
+}
 
 h2{
+    color: white;
     text-align: center;
     padding: 10px 0px;
+    text-shadow: 2px 2px 3px black;
 }
 
 p.fonte{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: right;
-    font-size: 2.3vh;
+    font-size: 1.8vh;
     padding-top: 20px;
     padding-right: 40px;
 }
